CHANGES
-------
Version 0.10 : In Progress
--------------------------
04/25/2018 Added an interesting new capability to TaskGroups.  You now
           have the option to wait for any non-None result to come back.
           For example, something like this:

               async with TaskGroup(wait=object) as g:
                    await g.spawn(coro1)
                    await g.spawn(coro2)
                    await g.spawn(coro3)
                    ...

               if g.completed:
                   result = g.completed.result

           In this case, the task group waits until any non-None 
           successful result comes back. If so, all of the other
           tasks are cancelled.  As with before, an error in any
           task causes all of the tasks to cancel.

Version 0.9 : March 10, 2018
----------------------------
02/24/2018 Refinements to Task crash reporting.  By default all Tasks
           that terminate with an uncaught exception log that exception
           as soon as it is detected.  Although there is a risk that this
           creates extra output, silencing the output makes it almost
           impossible to debug programs.  This is because errors get
           deferred to a later join() method---and you often don't know
           when that's going to take place.  You might just be staring
           a program wondering why it's not working.    If you really
           want errors to be silent, use spawn(coro, report_crash=False).
           
02/23/2018 Some refinements to the AWAIT() function.  You can now call it as 
           follows:

               result = AWAIT(callable, *args, **kwargs)

           If the passed callable is a coroutine function or a function that
           produces an awaitable object, it will be passed to Curio and executed
           in an asynchronous context.   If callable is just a normal function,
           then callable(*args, **kwargs) is returned.
