@@ -2,6 +2,7 @@ CHANGES
 -------
 Version 0.10 : In Progress
 --------------------------
+
 04/25/2018 Added an interesting new capability to TaskGroups.  You now
            have the option to wait for any non-None result to come back.
            For example, something like this:
@@ -19,6 +20,11 @@ Version 0.10 : In Progress
            successful result comes back. If so, all of the other
            tasks are cancelled.  As with before, an error in any
            task causes all of the tasks to cancel.
+
+04/14/2018 Changed the method of spawning processes for run_in_process to
+           use the "spawn" method of the multiprocessing module. This 
+	   prevents issues of having open file-descriptors cloned by
+           accident via fork().  For example, as in Issue #256.
 
 Version 0.9 : March 10, 2018
 ----------------------------
